<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/greenbkg" >

    <TextView
        android:id="@+id/todayIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="15dp"
        android:text="" 
        style="@style/headFont"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@+string/theImage"
        android:src="@drawable/itspaidlogo"
        android:background="#000000"/>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NOB"
        style="@style/billFont"/>

    <EditText
        android:id="@+id/billName"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NOBHint" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AP"
        style="@style/billFont"/>

    <EditText
        android:id="@+id/amountPaid"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/APHint"
        android:inputType="numberDecimal" />

    </LinearLayout>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TAD"
        style="@style/billFont"/>

    <EditText
        android:id="@+id/totalDue"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TADHint"
        android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp" >
    
    <TextView
        android:id="@+id/txtInstruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InstructDate"
        style="@style/billFont" />

    <Spinner
        android:id="@+id/monthSpin"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:entries="@array/month_array"/>

    <Spinner
        android:id="@+id/daySpin"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:entries="@array/day_array" />

    <Spinner
        android:id="@+id/yearSpin"
        android:layout_width="90dp"
        android:layout_height="wrap_content" />

    </LinearLayout>
    
	<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/paidFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PIF"
        style="@style/billFont" />

    <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">
    
    <RadioButton
        android:id="@+id/radioYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Y" />

    <RadioButton
        android:id="@+id/radioNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N" />
    </RadioGroup>
	</LinearLayout>

	
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:text="@string/save" 
        android:onClick="saveIt"/>

    <TextView
        android:id="@+id/paidFullTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="15dp"
        style="@style/fullFont"
        />

</LinearLayout>